@@ -1,5 +1,34 @@
 package io.beanmapper;
 
+import static io.beanmapper.utils.diagnostics.DiagnosticsDetailLevel.TREE_COMPLETE;
+import static org.junit.jupiter.api.Assertions.assertArrayEquals;
+import static org.junit.jupiter.api.Assertions.assertDoesNotThrow;
+import static org.junit.jupiter.api.Assertions.assertEquals;
+import static org.junit.jupiter.api.Assertions.assertFalse;
+import static org.junit.jupiter.api.Assertions.assertNotNull;
+import static org.junit.jupiter.api.Assertions.assertNotSame;
+import static org.junit.jupiter.api.Assertions.assertNull;
+import static org.junit.jupiter.api.Assertions.assertSame;
+import static org.junit.jupiter.api.Assertions.assertThrows;
+import static org.junit.jupiter.api.Assertions.assertTrue;
+
+import java.time.LocalDate;
+import java.time.LocalDateTime;
+import java.util.ArrayDeque;
+import java.util.ArrayList;
+import java.util.Arrays;
+import java.util.Collection;
+import java.util.HashSet;
+import java.util.List;
+import java.util.Map;
+import java.util.Optional;
+import java.util.PriorityQueue;
+import java.util.Queue;
+import java.util.Set;
+import java.util.TreeMap;
+import java.util.TreeSet;
+import java.util.concurrent.ArrayBlockingQueue;
+
 import io.beanmapper.annotations.BeanCollectionUsage;
 import io.beanmapper.config.AfterClearFlusher;
 import io.beanmapper.config.BeanMapperBuilder;
@@ -11,18 +40,72 @@ import io.beanmapper.core.converter.impl.LocalDateTimeToLocalDate;
 import io.beanmapper.core.converter.impl.LocalDateToLocalDateTime;
 import io.beanmapper.core.converter.impl.NestedSourceClassToNestedTargetClassConverter;
 import io.beanmapper.core.converter.impl.ObjectToStringConverter;
-import io.beanmapper.exceptions.*;
+import io.beanmapper.exceptions.BeanConversionException;
+import io.beanmapper.exceptions.BeanMappingException;
+import io.beanmapper.exceptions.BeanNoLogicSecuredCheckSetException;
+import io.beanmapper.exceptions.BeanNoRoleSecuredCheckSetException;
+import io.beanmapper.exceptions.BeanNoSuchPropertyException;
+import io.beanmapper.exceptions.FieldShadowingException;
 import io.beanmapper.shared.ReflectionUtils;
 import io.beanmapper.testmodel.anonymous.Book;
 import io.beanmapper.testmodel.anonymous.BookForm;
 import io.beanmapper.testmodel.beanalias.NestedSourceWithAlias;
 import io.beanmapper.testmodel.beanalias.SourceWithAlias;
 import io.beanmapper.testmodel.beanalias.TargetWithAlias;
-import io.beanmapper.testmodel.beanproperty.*;
-import io.beanmapper.testmodel.beansecuredfield.*;
-import io.beanmapper.testmodel.collections.*;
-import io.beanmapper.testmodel.collections.target_is_wrapped.*;
-import io.beanmapper.testmodel.construct.*;
+import io.beanmapper.testmodel.beanproperty.SourceBeanProperty;
+import io.beanmapper.testmodel.beanproperty.SourceBeanPropertyWithShadowing;
+import io.beanmapper.testmodel.beanproperty.SourceNestedBeanProperty;
+import io.beanmapper.testmodel.beanproperty.TargetBeanProperty;
+import io.beanmapper.testmodel.beanproperty.TargetBeanPropertyWithShadowing;
+import io.beanmapper.testmodel.beanproperty.TargetBeanPropertyWithShadowingNonPublicFieldWithoutSetter;
+import io.beanmapper.testmodel.beanproperty.TargetNestedBeanProperty;
+import io.beanmapper.testmodel.beansecuredfield.CheckSameNameLogicCheck;
+import io.beanmapper.testmodel.beansecuredfield.NeverReturnTrueCheck;
+import io.beanmapper.testmodel.beansecuredfield.SFSourceAWithSecuredField;
+import io.beanmapper.testmodel.beansecuredfield.SFSourceB;
+import io.beanmapper.testmodel.beansecuredfield.SFSourceCWithSecuredMethod;
+import io.beanmapper.testmodel.beansecuredfield.SFSourceDLogicSecured;
+import io.beanmapper.testmodel.beansecuredfield.SFSourceELogicSecured;
+import io.beanmapper.testmodel.beansecuredfield.SFTargetA;
+import io.beanmapper.testmodel.beansecuredfield.SFTargetBWithSecuredField;
+import io.beanmapper.testmodel.collections.CollSourceClear;
+import io.beanmapper.testmodel.collections.CollSourceClearFlush;
+import io.beanmapper.testmodel.collections.CollSourceConstruct;
+import io.beanmapper.testmodel.collections.CollSourceListIncompleteAnnotation;
+import io.beanmapper.testmodel.collections.CollSourceListNotAnnotated;
+import io.beanmapper.testmodel.collections.CollSourceMapNotAnnotated;
+import io.beanmapper.testmodel.collections.CollSourceNoGenerics;
+import io.beanmapper.testmodel.collections.CollSourceReuse;
+import io.beanmapper.testmodel.collections.CollSubTargetList;
+import io.beanmapper.testmodel.collections.CollTarget;
+import io.beanmapper.testmodel.collections.CollTargetEmptyList;
+import io.beanmapper.testmodel.collections.CollTargetListNotAnnotated;
+import io.beanmapper.testmodel.collections.CollTargetListNotAnnotatedUseSetter;
+import io.beanmapper.testmodel.collections.CollTargetMapNotAnnotated;
+import io.beanmapper.testmodel.collections.CollTargetNoGenerics;
+import io.beanmapper.testmodel.collections.CollectionListSource;
+import io.beanmapper.testmodel.collections.CollectionListTarget;
+import io.beanmapper.testmodel.collections.CollectionListTargetClear;
+import io.beanmapper.testmodel.collections.CollectionMapSource;
+import io.beanmapper.testmodel.collections.CollectionMapTarget;
+import io.beanmapper.testmodel.collections.CollectionPriorityQueueTarget;
+import io.beanmapper.testmodel.collections.CollectionQueueSource;
+import io.beanmapper.testmodel.collections.CollectionSetSource;
+import io.beanmapper.testmodel.collections.CollectionSetTarget;
+import io.beanmapper.testmodel.collections.CollectionSetTargetIncorrectSubtype;
+import io.beanmapper.testmodel.collections.CollectionSetTargetSpecificSubtype;
+import io.beanmapper.testmodel.collections.SourceWithListGetter;
+import io.beanmapper.testmodel.collections.TargetWithListPublicField;
+import io.beanmapper.testmodel.collections.target_is_wrapped.SourceWithUnwrappedItems;
+import io.beanmapper.testmodel.collections.target_is_wrapped.TargetWithWrappedItems;
+import io.beanmapper.testmodel.collections.target_is_wrapped.UnwrappedSource;
+import io.beanmapper.testmodel.collections.target_is_wrapped.UnwrappedToWrappedBeanConverter;
+import io.beanmapper.testmodel.collections.target_is_wrapped.WrappedTarget;
+import io.beanmapper.testmodel.construct.NestedSourceWithoutConstruct;
+import io.beanmapper.testmodel.construct.SourceBeanConstructWithList;
+import io.beanmapper.testmodel.construct.SourceWithConstruct;
+import io.beanmapper.testmodel.construct.TargetBeanConstructWithList;
+import io.beanmapper.testmodel.construct.TargetWithoutConstruct;
 import io.beanmapper.testmodel.construct_not_matching.BigConstructTarget;
 import io.beanmapper.testmodel.construct_not_matching.BigConstructTarget2;
 import io.beanmapper.testmodel.construct_not_matching.FlatConstructSource;
@@ -40,11 +123,33 @@ import io.beanmapper.testmodel.defaults.TargetWithDefaults;
 import io.beanmapper.testmodel.emptyobject.EmptySource;
 import io.beanmapper.testmodel.emptyobject.EmptyTarget;
 import io.beanmapper.testmodel.emptyobject.NestedEmptyTarget;
-import io.beanmapper.testmodel.encapsulate.*;
+import io.beanmapper.testmodel.encapsulate.Address;
+import io.beanmapper.testmodel.encapsulate.Country;
+import io.beanmapper.testmodel.encapsulate.House;
+import io.beanmapper.testmodel.encapsulate.ResultAddress;
+import io.beanmapper.testmodel.encapsulate.ResultManyToMany;
+import io.beanmapper.testmodel.encapsulate.ResultManyToOne;
+import io.beanmapper.testmodel.encapsulate.ResultOneToMany;
 import io.beanmapper.testmodel.encapsulate.source_annotated.Car;
 import io.beanmapper.testmodel.encapsulate.source_annotated.CarDriver;
 import io.beanmapper.testmodel.encapsulate.source_annotated.Driver;
-import io.beanmapper.testmodel.enums.*;
+import io.beanmapper.testmodel.enums.ColorEntity;
+import io.beanmapper.testmodel.enums.ColorResult;
+import io.beanmapper.testmodel.enums.ColorStringResult;
+import io.beanmapper.testmodel.enums.ComplexEnumResult;
+import io.beanmapper.testmodel.enums.Day;
+import io.beanmapper.testmodel.enums.DayEnumSourceArraysAsList;
+import io.beanmapper.testmodel.enums.EnumSourceArraysAsList;
+import io.beanmapper.testmodel.enums.EnumTargetList;
+import io.beanmapper.testmodel.enums.OptionalEnumModel;
+import io.beanmapper.testmodel.enums.OptionalEnumResult;
+import io.beanmapper.testmodel.enums.RGB;
+import io.beanmapper.testmodel.enums.UserRole;
+import io.beanmapper.testmodel.enums.UserRoleResult;
+import io.beanmapper.testmodel.enums.WeekEntity;
+import io.beanmapper.testmodel.enums.WeekResult;
+import io.beanmapper.testmodel.enums.WeekStringResult;
+import io.beanmapper.testmodel.enums.WithAbstractMethod;
 import io.beanmapper.testmodel.ignore.IgnoreSource;
 import io.beanmapper.testmodel.ignore.IgnoreTarget;
 import io.beanmapper.testmodel.initially_unmatched_source.SourceWithUnmatchedField;
@@ -71,7 +176,14 @@ import io.beanmapper.testmodel.numbers.ClassWithInteger;
 import io.beanmapper.testmodel.numbers.ClassWithLong;
 import io.beanmapper.testmodel.numbers.SourceWithDouble;
 import io.beanmapper.testmodel.numbers.TargetWithDouble;
-import io.beanmapper.testmodel.optional_getter.*;
+import io.beanmapper.testmodel.optional_getter.EntityResultWithMap;
+import io.beanmapper.testmodel.optional_getter.EntityWithMap;
+import io.beanmapper.testmodel.optional_getter.EntityWithOptional;
+import io.beanmapper.testmodel.optional_getter.EntityWithoutOptional;
+import io.beanmapper.testmodel.optional_getter.MyEntity;
+import io.beanmapper.testmodel.optional_getter.MyEntityResult;
+import io.beanmapper.testmodel.optional_getter.MyEntityResultWithNestedOptionalField;
+import io.beanmapper.testmodel.optional_getter.MyEntityResultWithOptionalField;
 import io.beanmapper.testmodel.othername.SourceWithOtherName;
 import io.beanmapper.testmodel.othername.TargetWithOtherName;
 import io.beanmapper.testmodel.parent.Player;
@@ -97,23 +209,32 @@ import io.beanmapper.testmodel.same_source_diff_results.ResultTwo;
 import io.beanmapper.testmodel.similar_subclasses.DifferentSource;
 import io.beanmapper.testmodel.similar_subclasses.DifferentTarget;
 import io.beanmapper.testmodel.similar_subclasses.SimilarSubclass;
-import io.beanmapper.testmodel.strict.*;
-import io.beanmapper.testmodel.strict_convention.*;
+import io.beanmapper.testmodel.strict.SourceAStrict;
+import io.beanmapper.testmodel.strict.SourceBNonStrict;
+import io.beanmapper.testmodel.strict.SourceCStrict;
+import io.beanmapper.testmodel.strict.SourceDStrict;
+import io.beanmapper.testmodel.strict.SourceEForm;
+import io.beanmapper.testmodel.strict.SourceF;
+import io.beanmapper.testmodel.strict.TargetANonStrict;
+import io.beanmapper.testmodel.strict.TargetBStrict;
+import io.beanmapper.testmodel.strict.TargetCNonStrict;
+import io.beanmapper.testmodel.strict.TargetDNonStrict;
+import io.beanmapper.testmodel.strict.TargetE;
+import io.beanmapper.testmodel.strict.TargetFResult;
+import io.beanmapper.testmodel.strict_convention.SCSourceAForm;
+import io.beanmapper.testmodel.strict_convention.SCSourceB;
+import io.beanmapper.testmodel.strict_convention.SCSourceCForm;
+import io.beanmapper.testmodel.strict_convention.SCTargetA;
+import io.beanmapper.testmodel.strict_convention.SCTargetBResult;
+import io.beanmapper.testmodel.strict_convention.SCTargetC;
 import io.beanmapper.testmodel.tostring.SourceWithNonString;
 import io.beanmapper.testmodel.tostring.TargetWithString;
 import io.beanmapper.utils.Trinary;
 import io.beanmapper.utils.diagnostics.tree.DiagnosticsNode;
+
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Nested;
 import org.junit.jupiter.api.Test;
-
-import java.time.LocalDate;
-import java.time.LocalDateTime;
-import java.util.*;
-import java.util.concurrent.ArrayBlockingQueue;
-
-import static io.beanmapper.utils.diagnostics.DiagnosticsDetailLevel.TREE_COMPLETE;
-import static org.junit.jupiter.api.Assertions.*;
 
 class BeanMapperTest {
 
@@ -385,7 +506,7 @@ class BeanMapperTest {
         EnumSourceArraysAsList source = new EnumSourceArraysAsList();
         EnumTargetList target = beanMapper.map(source, EnumTargetList.class);
         assertEquals(RGB.values().length, target.items.size());
-        assertEquals("RED", target.items.get(0));
+        assertEquals("RED", target.items.getFirst());
     }
 
     @Test
@@ -853,8 +974,8 @@ class BeanMapperTest {
         source.objects.add(nestedSourceClass);
 
         TargetWithCollection target = beanMapper.map(source, TargetWithCollection.class);
-        assertEquals(source.objects.get(0).name, target.objects.get(0).name);
-        assertEquals("[" + source.objects.get(0).laptopNumber + "]", target.objects.get(0).laptopNumber);
+        assertEquals(source.objects.getFirst().name, target.objects.getFirst().name);
+        assertEquals("[" + source.objects.getFirst().laptopNumber + "]", target.objects.getFirst().laptopNumber);
     }
 
     @Test
@@ -1039,7 +1160,7 @@ class BeanMapperTest {
 
     @Test
     void overrideConverterTest() {
-        BeanMapper beanMapper = new BeanMapperBuilder()
+        BeanMapper localBeanMapper = new BeanMapperBuilder()
                 .addPackagePrefix(BeanMapper.class)
                 .build();
 
@@ -1047,20 +1168,20 @@ class BeanMapperTest {
         source.setDiffType(LocalDate.of(2015, 1, 1));
         source.setSameType(LocalDate.of(2000, 1, 1));
 
-        TargetWithDateTime target = beanMapper.wrap()
+        TargetWithDateTime target = localBeanMapper.wrap()
                 .addConverter(new LocalDateToLocalDateTime())
                 .build()
                 .map(source, TargetWithDateTime.class);
 
         assertEquals(target.getDiffType(), LocalDateTime.of(2015, 1, 1, 0, 0));
         assertEquals(target.getSameType(), LocalDate.of(2000, 1, 1));
-        var exception = assertThrows(BeanConversionException.class, () -> beanMapper.map(source, TargetWithDateTime.class));
+        var exception = assertThrows(BeanConversionException.class, () -> localBeanMapper.map(source, TargetWithDateTime.class));
         assertEquals("Could not convert LocalDate to LocalDateTime.", exception.getMessage());
     }
 
     @Test
     void beanParentDirectDescendantAnnotationOnSource() {
-        BeanMapper beanMapper = new BeanMapperBuilder()
+        BeanMapper localBeanMapper = new BeanMapperBuilder()
                 .addPackagePrefix(BeanMapper.class)
                 .build();
 
@@ -1069,7 +1190,7 @@ class BeanMapperTest {
         form.skill = new SkillForm();
         form.skill.name = "Athletics";
 
-        Player player = beanMapper.map(form, Player.class);
+        Player player = localBeanMapper.map(form, Player.class);
 
         assertEquals(form.name, player.getSkill().getPlayer1().getName(), "@BeanParent on source side was not triggered");
         assertEquals(form.name, player.getSkill().getPlayer2().getName(), "@BeanParent on target side was not triggered");
@@ -1077,7 +1198,7 @@ class BeanMapperTest {
 
     @Test
     void beanParentThroughCollection() {
-        BeanMapper beanMapper = new BeanMapperBuilder()
+        BeanMapper localBeanMapper = new BeanMapperBuilder()
                 .addPackagePrefix(BeanMapper.class)
                 .build();
 
@@ -1091,7 +1212,7 @@ class BeanMapperTest {
         form.skills.add(new SkillForm());
         form.skills.get(2).name = "CLimbing";
 
-        Player player = beanMapper.map(form, Player.class);
+        Player player = localBeanMapper.map(form, Player.class);
 
         assertEquals(form.name, player.getSkills().get(0).getPlayer1().getName());
         assertEquals(form.name, player.getSkills().get(1).getPlayer1().getName());
@@ -1100,13 +1221,13 @@ class BeanMapperTest {
 
     @Test
     void numberToNumberInList() {
-        BeanMapper beanMapper = new BeanMapperBuilder().build();
+        BeanMapper localBeanMapper = new BeanMapperBuilder().build();
 
         List<String> numberStrings = new ArrayList<>();
         numberStrings.add("1");
 
-        List<Integer> numbers = beanMapper.map(numberStrings, Integer.class);
-        assertEquals((Integer) 1, numbers.get(0));
+        List<Integer> numbers = localBeanMapper.map(numberStrings, Integer.class);
+        assertEquals((Integer) 1, numbers.getFirst());
     }
 
     @Test
@@ -1116,9 +1237,9 @@ class BeanMapperTest {
         nestedInSource.setId(42L);
         source.setLayer4(nestedInSource);
 
-        BeanMapper beanMapper = new BeanMapperBuilder().build();
+        BeanMapper localBeanMapper = new BeanMapperBuilder().build();
 
-        Layer3 target = beanMapper.map(source, Layer3.class);
+        Layer3 target = localBeanMapper.map(source, Layer3.class);
         assertEquals(source.getLayer4(), target.getLayer4());
     }
 
@@ -1158,9 +1279,9 @@ class BeanMapperTest {
                 .addBeanPairWithStrictSource(SourceDStrict.class, TargetDNonStrict.class);
         var exception = assertThrows(BeanStrictMappingRequirementsException.class, builder::build);
         assertEquals(SourceAStrict.class, exception.getValidationMessages().get(0).getSourceClass());
-        assertEquals("noMatch", exception.getValidationMessages().get(0).getFields().get(0).getName());
+        assertEquals("noMatch", exception.getValidationMessages().get(0).getFields().getFirst().getName());
         assertEquals(TargetBStrict.class, exception.getValidationMessages().get(1).getTargetClass());
-        assertEquals("noMatch", exception.getValidationMessages().get(1).getFields().get(0).getName());
+        assertEquals("noMatch", exception.getValidationMessages().get(1).getFields().getFirst().getName());
         assertEquals(SourceCStrict.class, exception.getValidationMessages().get(2).getSourceClass());
 
         assertTrue(exception.getValidationMessages()
@@ -1264,7 +1385,7 @@ class BeanMapperTest {
     @Test
     void beanCollectionClearCallsAfterClearFlusher() throws Exception {
         AfterClearFlusher afterClearFlusher = createAfterClearFlusher();
-        BeanMapper beanMapper = new BeanMapperBuilder()
+        BeanMapper localBeanMapper = new BeanMapperBuilder()
                 .addAfterClearFlusher(afterClearFlusher)
                 .build().wrap()
                 .setFlushEnabled(true)
@@ -1277,7 +1398,7 @@ class BeanMapperTest {
             items = new ArrayList<>();
             items.add("B");
         }};
-        beanMapper.map(source, target);
+        localBeanMapper.map(source, target);
         assertTrue(afterClearFlusher.getClass().getField("trigger").getBoolean(afterClearFlusher),
                 "Should have called the afterClearFlusher instance");
     }
@@ -1285,7 +1406,7 @@ class BeanMapperTest {
     @Test
     void beanCollectionClearDoesNotCallFlusher() throws Exception {
         AfterClearFlusher afterClearFlusher = createAfterClearFlusher();
-        BeanMapper beanMapper = new BeanMapperBuilder()
+        BeanMapper localBeanMapper = new BeanMapperBuilder()
                 .addAfterClearFlusher(afterClearFlusher)
                 .build();
         CollSourceClear source = new CollSourceClear() {{
@@ -1295,7 +1416,7 @@ class BeanMapperTest {
             items = new ArrayList<>();
             items.add("B");
         }};
-        beanMapper.map(source, target);
+        localBeanMapper.map(source, target);
         assertFalse(afterClearFlusher.getClass().getField("trigger").getBoolean(afterClearFlusher),
                 "Should NOT have called the afterClearFlusher instance");
     }
@@ -1325,7 +1446,7 @@ class BeanMapperTest {
         target = beanMapper.map(source, target);
         assertEquals(4, target.items.size());
         assertEquals(expectedList, target.items);
-        assertEquals("D", target.items.get(0));
+        assertEquals("D", target.items.getFirst());
     }
 
     @Test
@@ -1358,10 +1479,10 @@ class BeanMapperTest {
 
     @Test
     void beanMapper_shouldMapFieldsFromSuperclass() {
-        BeanMapper beanMapper = new BeanMapperBuilder()
+        BeanMapper localBeanMapper = new BeanMapperBuilder()
                 .setApplyStrictMappingConvention(false)
                 .build();
-        UserRoleResult result = beanMapper.map(UserRole.ADMIN, UserRoleResult.class);
+        UserRoleResult result = localBeanMapper.map(UserRole.ADMIN, UserRoleResult.class);
         assertEquals(UserRole.ADMIN.name(), result.name);
     }
 
@@ -1370,7 +1491,7 @@ class BeanMapperTest {
         List<Long> numbers = List.of(42L, 57L, 33L);
         List<String> numbersAsText = beanMapper.map(numbers, String.class);
         assertEquals(3, numbersAsText.size());
-        assertEquals("42", numbersAsText.get(0));
+        assertEquals("42", numbersAsText.getFirst());
     }
 
     @Test
@@ -1392,7 +1513,7 @@ class BeanMapperTest {
 
     @Test
     void wrap_mustAlwaysWrap() {
-        assertNotSame(beanMapper.getConfiguration(), beanMapper.wrap().build().getConfiguration());
+        assertNotSame(beanMapper.configuration(), beanMapper.wrap().build().configuration());
     }
 
     @Test
@@ -1417,35 +1538,35 @@ class BeanMapperTest {
 
     @Test
     void securedSourceMethodNoAccess() {
-        BeanMapper beanMapper = new BeanMapperBuilder()
+        BeanMapper localBeanMapper = new BeanMapperBuilder()
                 .setSecuredPropertyHandler(roles -> false)
                 .build();
         SFSourceCWithSecuredMethod source = new SFSourceCWithSecuredMethod() {{
             setName("Henk");
         }};
-        SFTargetA target = beanMapper.map(source, SFTargetA.class);
+        SFTargetA target = localBeanMapper.map(source, SFTargetA.class);
         assertNull(target.name);
     }
 
     private void assertSecuredSourceField(RoleSecuredCheck roleSecuredCheck, String expectedName) {
-        BeanMapper beanMapper = new BeanMapperBuilder()
+        BeanMapper localBeanMapper = new BeanMapperBuilder()
                 .setSecuredPropertyHandler(roleSecuredCheck)
                 .build();
         SFSourceAWithSecuredField source = new SFSourceAWithSecuredField() {{
             name = "Henk";
         }};
-        SFTargetA target = beanMapper.map(source, SFTargetA.class);
+        SFTargetA target = localBeanMapper.map(source, SFTargetA.class);
         assertEquals(expectedName, target.name);
     }
 
     private void assertSecuredTargetField(RoleSecuredCheck roleSecuredCheck, String expectedName) {
-        BeanMapper beanMapper = new BeanMapperBuilder()
+        BeanMapper localBeanMapper = new BeanMapperBuilder()
                 .setSecuredPropertyHandler(roleSecuredCheck)
                 .build();
         SFSourceB source = new SFSourceB() {{
             name = "Henk";
         }};
-        SFTargetBWithSecuredField target = beanMapper.map(source, SFTargetBWithSecuredField.class);
+        SFTargetBWithSecuredField target = localBeanMapper.map(source, SFTargetBWithSecuredField.class);
         assertEquals(expectedName, target.name);
     }
 
@@ -1459,25 +1580,25 @@ class BeanMapperTest {
 
     @Test
     void allowSecuredPropertyDoesNotHaveAHandler() {
-        BeanMapper beanMapper = new BeanMapperBuilder()
+        BeanMapper localBeanMapper = new BeanMapperBuilder()
                 .setEnforcedSecuredProperties(false)
                 .build();
         SFSourceAWithSecuredField source = new SFSourceAWithSecuredField() {{
             name = "Henk";
         }};
-        SFTargetA target = beanMapper.map(source, SFTargetA.class);
+        SFTargetA target = localBeanMapper.map(source, SFTargetA.class);
         assertEquals("Henk", target.name);
     }
 
     @Test
     void logicSecuredCheckMustBlock() {
-        BeanMapper beanMapper = new BeanMapperBuilder()
+        BeanMapper localBeanMapper = new BeanMapperBuilder()
                 .addLogicSecuredCheck(new NeverReturnTrueCheck())
                 .build();
         SFSourceDLogicSecured source = new SFSourceDLogicSecured() {{
             name = "Henk";
         }};
-        SFTargetA target = beanMapper.map(source, SFTargetA.class);
+        SFTargetA target = localBeanMapper.map(source, SFTargetA.class);
         assertNull(target.name);
     }
 
@@ -1492,13 +1613,13 @@ class BeanMapperTest {
     }
 
     private void logicCheckForEqualName(String initialName, String expectedName) {
-        BeanMapper beanMapper = new BeanMapperBuilder()
+        BeanMapper localBeanMapper = new BeanMapperBuilder()
                 .addLogicSecuredCheck(new CheckSameNameLogicCheck())
                 .build();
         SFSourceELogicSecured source = new SFSourceELogicSecured() {{
             name = initialName;
         }};
-        SFTargetA target = beanMapper.map(source, SFTargetA.class);
+        SFTargetA target = localBeanMapper.map(source, SFTargetA.class);
         assertEquals(expectedName, target.name);
     }
 
@@ -1512,7 +1633,7 @@ class BeanMapperTest {
 
     @Test
     void unwrappedToWrapped() {
-        BeanMapper beanMapper = new BeanMapperBuilder()
+        BeanMapper localBeanMapper = new BeanMapperBuilder()
                 .addConverter(new UnwrappedToWrappedBeanConverter())
                 .addBeanPairWithStrictSource(SourceWithUnwrappedItems.class, TargetWithWrappedItems.class)
                 .build();
@@ -1522,7 +1643,7 @@ class BeanMapperTest {
         source.items.add(UnwrappedSource.ALPHA);
         TargetWithWrappedItems target = new TargetWithWrappedItems();
         List<WrappedTarget> targetItems = target.getItems();
-        target = beanMapper.map(source, target);
+        target = localBeanMapper.map(source, target);
         assertEquals(targetItems, target.getItems());
         assertEquals(source.items.get(0), target.getItems().get(0).getElement());
         assertEquals(source.items.get(1), target.getItems().get(1).getElement());
@@ -1531,14 +1652,14 @@ class BeanMapperTest {
 
     @Test
     void emptyListToExistingList() {
-        BeanMapper beanMapper = new BeanMapperBuilder()
+        BeanMapper localBeanMapper = new BeanMapperBuilder()
                 .addConverter(new UnwrappedToWrappedBeanConverter())
                 .build();
         SourceWithUnwrappedItems source = new SourceWithUnwrappedItems();
         source.items = null;
         TargetWithWrappedItems target = new TargetWithWrappedItems();
         List<WrappedTarget> targetItems = target.getItems();
-        target = beanMapper.map(source, target);
+        target = localBeanMapper.map(source, target);
         assertEquals(targetItems, target.getItems());
     }
 
@@ -1845,7 +1966,7 @@ class BeanMapperTest {
     void testDiagnosticsCreatesExpectedTree() {
         beanMapper = beanMapper.wrap(TREE_COMPLETE).build();
         beanMapper.map(createMyEntity(), MyEntityResult.class);
-        DiagnosticsConfiguration dc = (DiagnosticsConfiguration) beanMapper.getConfiguration();
+        DiagnosticsConfiguration dc = (DiagnosticsConfiguration) beanMapper.configuration();
         DiagnosticsNode<?, ?> root = dc.getBeanMapperDiagnostics().orElse(null);
         assertNotNull(root);
         assertEquals(0, root.getDepth());
@@ -1857,7 +1978,7 @@ class BeanMapperTest {
         beanMapper = beanMapper.wrap(TREE_COMPLETE).build();
         beanMapper.map(createMyEntity(), MyEntityResult.class);
         beanMapper.map(createPerson(), PersonResult.class);
-        DiagnosticsConfiguration dc = (DiagnosticsConfiguration) beanMapper.getConfiguration();
+        DiagnosticsConfiguration dc = (DiagnosticsConfiguration) beanMapper.configuration();
         assertEquals(1, dc.getBeanMapperDiagnostics().orElse(null).getDiagnostics().size());
     }
 
